--- a/src/components/Services/style.scss
+++ b/src/components/Services/style.scss
@@ -22,7 +22,7 @@
 
 .box {
   padding: 1rem;
-  width: 25vw;
+  width: 15vw;
 
    &:hover {
     opacity: 0.8;
@@ -33,6 +33,8 @@
   
   &-image {
     border-radius: 10px;
+    min-width: 85%;
+    max-width: 85%;
     margin-bottom: 1rem;
   
   }
@@ -42,9 +44,19 @@
     font-weight: 700;
     
   }
-  &-price {
-    text-align: left;
-    font-size: 600;
+  &-description {
+    margin-bottom: 2rem;
+    
+  }
+  &-price{
+    display: flex;
+    align-items: left;
+     p{
+      font-weight: 700;
+      
+
+    }
+    
   }
 
    }
