--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,9 +1,11 @@
+@use 'src/styles/vars';
+
 .app {
   padding-top: 1rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
- 
+  background-color : vars.$five;
 }
 
