--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,11 +1,11 @@
-
+@use 'src/styles/vars';
 
 .copyright {
   margin-top: 2rem;
   text-align: center;
   font-weight: 700;
   padding:2rem;
-  background-color: black;
+  background-color: vars.$seven;
   color: white;
   width: 100vw;
  
