--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,20 +1,22 @@
+@use 'src/styles/vars';
+
 nav{
     display: flex;
     justify-content: space-between;
-    
     margin-bottom: 2rem;
-
+    color: white;
 }
 .nav-item{
   font-weight: 600;
   margin-right: 1rem;
   margin-left: 1rem;
   padding:0.5rem;
-  border-bottom: 1px navy solid;
+  border-bottom: 2px vars.$six solid ;
   
   &:hover {
-    background-color: rgba(7, 76, 76, 0.1);
+    background-color: vars.$one;
     transition: 0.5s;
+    border: none;
   }
 }
 
