--- a/src/components/Services/style.scss
+++ b/src/components/Services/style.scss
@@ -1,3 +1,5 @@
+@use 'src/styles/vars';
+
 .services {
 
   &-list{
@@ -9,14 +11,13 @@
 
   &-box {
     background: rgb(9,9,121);
-    background: linear-gradient(90deg,#191970 21%, rgba(59,208,255,1) 57%, #33006F 80%);
-    outline: 2px solid #1C6EA4;
-    border-right: 2px solid #1C6EA4;
-    border-radius: 0px 40px 0px 40px;
+    background: linear-gradient(90deg,vars.$five 21%, rgba(59,208,255,1) 57%, vars.$seven 80%);
+    outline: 2px solid vars.$six;
+    border-right: 2px solid vars.$seven;
+    border-radius: 0px 30px 0px 30px;
     padding: 0.5rem;
     margin-right: 1rem;
  
-    
 }
 }
 
