--- a/src/components/Services/detail.scss
+++ b/src/components/Services/detail.scss
@@ -1,3 +1,4 @@
+@use 'src/styles/vars';
 
 .detail-page {
   display: flex;
@@ -5,24 +6,31 @@
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
- 
-  
-  
+
 }
 
 .form {
+  margin-right: 1rem;
   padding: 2rem;
   display:flex;
   flex-direction: column;
-  border-left: 2px solid teal;
+  border-left: 2px solid vars.$two;
 
   
 }
 .visuel-effect {
-  padding: 1rem;
-  font-weight: 700;
+  padding: 0.5rem;
+  font-weight: 600;
   background-color: white;
   border-right: 2px solid teal;
-  border-radius: 10px 40px 0px 10px;
+  border-radius: 10px;
   margin-bottom: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+label {
+  color: vars.$one;
+  margin-bottom: 1rem;
+  margin-left: 0.5rem;
+  font-weight: 600;
 }
