--- a/src/components/UI/Input/input.scss
+++ b/src/components/UI/Input/input.scss
@@ -48,3 +48,20 @@
 .hidden{
   display: none;
 }
+.visuel-effect {
+  padding: 0.5rem;
+  font-weight: 600;
+  background-color: white;
+  border-right: 2px solid teal;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+label {
+  color: vars.$one;
+  margin-bottom: 1rem;
+  margin-left: 0.5rem;
+  font-size: 1.2rem;
+ 
+}
