--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,15 +1,24 @@
 @use 'src/styles/vars';
  @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&family=Slabo+27px&display=swap');
 
-
-.app {
+ .app {
+  min-width: 100vh;
   padding-top: 1rem;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color : vars.$five;
+  background-color: vars.$five;
   font-family: 'Nothing You Could Do', cursive;
   font-family: 'Slabo 27px', serif;
+  position: relative;
+}
+
+//IS AUTHETIFICIATE 
+
+.RESIZE {
+  transform: translateX(25vh);
+  width: calc(100vh - 10vh);
+ 
 }
 
