--- a/src/components/Appointement/style.scss
+++ b/src/components/Appointement/style.scss
@@ -34,11 +34,17 @@
   padding: 0.5rem;
   font-weight: 600;
   background-color: white;
-  border-right: 2px solid teal;
+  border-right: 2px solid vars.$seven;
   border-radius: 10px;
   margin-bottom: 1rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+  color : vars.$seven
+}
+.left{
+  text-align: center;
+  font-weight: 700;
+
 }
 label {
   color: vars.$one;
@@ -73,4 +79,12 @@ label {
 }
 .data-value{
   color: yellow;
+}
+.box-img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15%;
+  height: 10%;
+  border-radius: 5px;
 }
