--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -2,13 +2,11 @@
  @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&family=Slabo+27px&display=swap');
 
  .app {
-  min-width: 100vh;
-  padding-top: 1rem;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: vars.$five;
+  background-color: vars.$six;
   font-family: 'Nothing You Could Do', cursive;
   font-family: 'Slabo 27px', serif;
   position: relative;
