--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,4 +1,10 @@
 @use 'src/styles/vars';
+header {
+  background-color: vars.$seven;
+  margin-top: 1rem;
+  padding-top: 1rem;
+  top: 0;
+}
 
 nav{
     display: flex;
@@ -6,7 +12,8 @@ nav{
     margin-bottom: 2rem;
     color: white;
     position: relative;
-    z-index: 2
+    z-index: 2;
+  
 }
 .nav-item{
   font-size: 1.1rem;
