--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -5,7 +5,10 @@
   width: 40vw;
   margin: auto;
   padding: 1rem;
-  background-color: vars.$seven;
+  //background-color: vars.$seven;
+ 
+  background: linear-gradient(90deg,vars.$four 21%, rgb(239, 241, 242) 57%, vars.$seven 80%);
+  outline: 1px solid vars.$six;
   border-radius: 0px 30px 0px 30px;
 
     &-form {
